--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ prinGraph();
 
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
-    <footer id="footer">
+    <!--<footer id="footer">
         <div class="container">
             <h3>Jackson Holliday</h3>
             <p>If your looking for more, hit up some of the social links or the tabs on the left to go to my github or portfolio</p>
@@ -252,16 +252,16 @@ prinGraph();
             <div class="copyright">
                 &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
             </div>
-            <div class="credits">
+            <div class="credits">-->
                 <!-- All the links in the footer should remain intact. -->
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: [license-url] -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade.</a>
+                <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade.</a>
                 <p style="font-size: 15px">Customized by Jackson Holliday</p>
             </div>
         </div>
-    </footer><!-- End Footer -->
+    </footer>--><!-- End Footer -->
 
     <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
     <div id="preloader"></div>
