--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <li><a href="#about"><i class="bx bx-money"></i> <span>Background</span></a></li>
                 <li><a href="#code"><i class="bx bx-code"></i> <span>Code</span></a></li>
                 <li><a class="nav-link" href="/Loan.html" target="_blank"><i class="bx bx-calculator"></i> <span>Loan Calculator</span></a></li>
-                <li><a class="nav-link" href="#" target="_blank"><i class="bx bxl-github"></i> <span>GitHub Repository</span></a></li>
-                <li><a class="nav-link" href="https://jackson-hollidays-portfolio.netlify.app/" target="_blank"><i class="bx bx-user"></i> <span>Portfolio</span></a></li>
+                <li><a class="nav-link" href="https://github.com/JaxHolliday/LoanCalc-Revamp" target="_blank"><i class="bx bxl-github"></i> <span>GitHub Repository</span></a></li>
+                <!--<li><a class="nav-link" href="https://jackson-hollidays-portfolio.netlify.app/" target="_blank"><i class="bx bx-user"></i> <span>Portfolio</span></a></li>-->
             </ul>
         </nav><!-- .nav-menu -->
 
@@ -92,7 +92,7 @@
 
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="/img/FizzBuzz_4pack.jpg" class="img-fluid" alt="">
+                        <img src="/img/Scrooge-Money-Charm-600-kristin-kossi.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content">
                         <h3>Description</h3>
